# dreaming-sdk

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  package-lock.json  package.json  release.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  weekly-eval.yml
.mimocode/agents/primary/: debugger.md  reviewer.md
.mimocode/agents/sub/: lint-fixer.md  schema-migrator.md  test-runner.md
.mimocode/command/: sync.md
.mimocode/skills/cli/: SKILL.md
.mimocode/skills/coverage/: SKILL.md
.mimocode/skills/integrations/: SKILL.md
.mimocode/skills/postgres/: SKILL.md
.mimocode/skills/release/: SKILL.md
.mimocode/skills/test-all/: SKILL.md
.mimocode/skills/verify/: SKILL.md
automations/: dream_eval_weekly.json  dream_nightly_dryrun.json
benchmark/: cli.py  evaluator.py  schema.yaml
benchmark/scenarios/cloudflare_change/: 001-worker-config.yaml
benchmark/scenarios/github_pr_review/: 001-safe-dependency-bump.yaml  002-secrets-leak.yaml
benchmark/scenarios/linear_triage/: 001-route-bug.yaml  002-duplicate-stale.yaml
benchmark/scenarios/memory_write/: 001-propose-with-evidence.yaml
benchmark/scenarios/notion_update/: 001-sprint-status.yaml
benchmark/tests/: test_evaluator.py
docs/: README.md  agent-memory.md  agentic-loop-spec.md  architecture.md  eval-automation-plan.md  eval-quality.md  maintainer-guide.md  memory-trust-roadmap-2026Q3.md  multi-agent.md  operations.md  oss-readiness.md  quickstart.md  release-process.md  sdk-integration.md  sprint0-agentic-loop.md  sprint1-agentic-loop.md
docs/runbooks/: cloudflare-dashboard-domain.md  eval-scheduling.md  fleet-agent-wiring.md  memory-ops.md  oci-postgres-bootstrap.md
dream-eval/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
dream-eval/.claude-plugin/: SKILL.md
dream-eval/.codex-plugin/: SKILL.md  plugin.json
dream-eval/.cursor-plugin/: SKILL.md  plugin.json
dream-eval/eval/results/2026-06-27T15-38-46Z/: metrics.json
dream-eval/examples/: quick_start.py
dream-eval/src/dream_eval/: __init__.py  backends.py  backends_pg.py  cli.py  gates.py  nli.py  scoring.py  types.py
dream-eval/src/dream_eval/mcp/: __init__.py  server.py
dream-eval/tests/: test_backends.py  test_backends_pg.py  test_cli.py  test_coverage_boost.py  test_final_coverage.py  test_gates.py  test_last_percent.py  test_mcp.py  test_mcp_server.py  test_nli.py  test_scoring.py  test_scoring_extra.py  test_types.py
eval/: soul-snapshot.md
eval/golden-corpus/: eval-report.json  labels.json
eval/golden-corpus/transcripts/: 001-agent-memory-decision.jsonl  002-type-safety-preference.jsonl  003-security-rule.jsonl
lib/: dream-cli.js  dream-tui.js
python/: .env.example  .gitignore  README.md  pyproject.toml
python/deploy/cloudflare/: utrecht-dataos-api.worker.js
python/deploy/fleet/: README.md  agent-memory-dashboard.service  agent-memory-eval.service  agent-memory-eval.timer  cloudflare_tunnel.py  install-agent-memory.sh  install-codex.sh  install-memory.sh  sync-env.sh
python/deploy/oci/: README.md  docker-compose.yml  prefect_flow.py
python/examples/: linear_memory_flow.py
python/src/cursor_dreaming_memory/: __init__.py  agent_memory.py  cli.py  config.py  dashboard.py  session.py  triage.py  types.py
python/src/cursor_dreaming_memory/integrations/: __init__.py  cloudflare.py  linear.py  notion.py  slack.py
python/src/cursor_dreaming_memory/observability/: __init__.py  sentry.py
python/src/cursor_dreaming_memory/semantic/: __init__.py  lancedb.py
python/src/cursor_dreaming_memory/store/: __init__.py  oci.py  postgres.py  schema.sql
python/src/dreaming_memory/: __init__.py  agent_memory.py  cli.py  config.py  dashboard.py  session.py  triage.py  types.py
python/src/dreaming_memory/integrations/: __init__.py  cloudflare.py  linear.py  notion.py  slack.py
python/src/dreaming_memory/mcp/: __init__.py  server.py
python/src/dreaming_memory/observability/: __init__.py  sentry.py
python/src/dreaming_memory/semantic/: __init__.py  lancedb.py
python/src/dreaming_memory/store/: __init__.py  adapter.py  in_memory.py  mem0_adapter.py  oci.py  postgres.py  schema.sql
python/src/dreaming_memory/store/migrations/: schema_v1.sql  schema_v2.sql  schema_v3.sql  schema_v4.sql
python/tests/: test_adapter.py  test_agent_memory.py  test_cli_extended.py  test_dashboard.py  test_export.py  test_governance.py  test_linear.py  test_mcp_server.py  test_memory.py  test_notion.py  test_postgres.py  test_sentry.py  test_slack.py  test_triage.py
schema/: dream-decisions.schema.json  metrics.schema.json
scripts/: test-dream-cli.js  test-dream-tui.js
sdk/: run-dream-cloud.ts
skills-bundle/: README.md  install-dream-skills.ps1  install-dream-skills.sh
skills-bundle/claude/skills/dream-eval-loop/: SKILL.md
skills-bundle/codex/skills/dream-eval-loop/: SKILL.md
skills-bundle/codex/skills/dream-eval-loop/agents/: openai.yaml
skills-bundle/codex/skills/dream-tui/: SKILL.md
skills-bundle/codex/skills/dream-tui/agents/: openai.yaml
skills-bundle/cursor/skills/dream-eval-loop/: SKILL.md
skills-bundle/cursor/skills/dream-tui/: SKILL.md
skills-bundle/cursor/skills/dream-tui/agents/: dream-navigator.md
skills-bundle/grok/skills/dream-eval-loop/: SKILL.md
skills-bundle/opencode/skills/dream-eval-loop/: SKILL.md
skills-bundle/shared/: agent-memory.md  chain-reference.md  cli-contract.md  metrics-schema.md  orchestration-body.md  tui-ux.md
