[project]
name = "dream-eval"
version = "0.2.0"
description = "Agent-agnostic faithfulness evaluation framework — evaluator → judge → curator pipeline for agent memory quality scoring"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "OnlineChefGroep" }]
keywords = ["agent-eval", "faithfulness", "memory-evaluation", "llm-eval", "quality-gate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.1",
]
mcp = [
    "mcp>=1.0",
]
nli = [
    "transformers>=4.35",
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
    "hypothesis>=6.100",
]

[project.scripts]
dream-eval = "dream_eval.cli:main"
dream-eval-mcp = "dream_eval.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dream_eval"]

[tool.hatch.build.targets.wheel.force-include]
"src/dream_eval/py.typed" = "dream_eval/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
