[project]
name = "cursor-dreaming-memory"
version = "0.1.0"
description = "Lightweight agent memory extension for cursor-dreaming-sdk (Utrecht Data OS / CHEF-308)"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "OnlineChefGroep" }]
keywords = ["agent-memory", "cursor", "dream-eval", "linear", "notion", "postgres"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.13",
    "psycopg[binary]>=3.2",
]

[project.urls]
Homepage = "https://github.com/OnlineChefGroep/cursor-dreaming-sdk"
Documentation = "https://github.com/OnlineChefGroep/cursor-dreaming-sdk/tree/main/docs"
Repository = "https://github.com/OnlineChefGroep/cursor-dreaming-sdk"
Issues = "https://github.com/OnlineChefGroep/cursor-dreaming-sdk/issues"
Changelog = "https://github.com/OnlineChefGroep/cursor-dreaming-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
semantic = [
    "lancedb>=0.22",
    "pyarrow>=18.0",
]
r2 = [
    "boto3>=1.35",
]
sentry = [
    "sentry-sdk>=2.19",
]
redis = [
    "upstash-redis>=1.2",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
prefect = [
    "prefect>=3.0",
]
all = [
    "lancedb>=0.22",
    "pyarrow>=18.0",
    "boto3>=1.35",
    "sentry-sdk>=2.19",
    "upstash-redis>=1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pyyaml>=6.0",
    "pytest>=8.0",
    "ruff>=0.15",
]

[project.scripts]
dream-memory = "cursor_dreaming_memory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cursor_dreaming_memory"]

[tool.hatch.build.targets.wheel.force-include]
"src/cursor_dreaming_memory/store/schema.sql" = "cursor_dreaming_memory/store/schema.sql"
"src/cursor_dreaming_memory/py.typed" = "cursor_dreaming_memory/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
per-file-ignores = { "examples/*" = ["E501"], "src/cursor_dreaming_memory/agent_memory.py" = ["E501"], "src/cursor_dreaming_memory/dashboard.py" = ["E501"] }
