[project]
name = "dreaming-memory"
version = "0.2.0"
description = "Governed agent memory for the dreaming-sdk memory trust layer"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT" }
authors = [{ name = "OnlineChefGroep" }]
keywords = ["agent-memory", "dream-eval", "linear", "notion", "postgres", "postgrest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.13",
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.1",
]

[project.urls]
Homepage = "https://github.com/OnlineChefGroep/dreaming-sdk"
Documentation = "https://github.com/OnlineChefGroep/dreaming-sdk/tree/main/docs"
Repository = "https://github.com/OnlineChefGroep/dreaming-sdk"
Issues = "https://github.com/OnlineChefGroep/dreaming-sdk/issues"

[project.optional-dependencies]
semantic = [
    "lancedb>=0.22",
    "pyarrow>=18.0",
]
r2 = [
    "boto3>=1.35",
]
sentry = [
    "sentry-sdk>=2.19",
]
redis = [
    "upstash-redis>=1.2",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",
]
prefect = [
    "prefect>=3.0",
]
all = [
    "lancedb>=0.22",
    "pyarrow>=18.0",
    "boto3>=1.35",
    "sentry-sdk>=2.19",
    "upstash-redis>=1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pyyaml>=6.0",
    "pytest>=8.0",
    "ruff>=0.15",
    "hypothesis>=6.100",
]

[project.scripts]
dream-memory = "dreaming_memory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreaming_memory"]

[tool.hatch.build.targets.wheel.force-include]
"src/dreaming_memory/store/schema.sql" = "dreaming_memory/store/schema.sql"
"src/dreaming_memory/py.typed" = "dreaming_memory/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
per-file-ignores = { "examples/*" = ["E501"], "src/dreaming_memory/agent_memory.py" = ["E501"], "src/dreaming_memory/dashboard.py" = ["E501"] }
